--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,10 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.4.3'
     kapt 'androidx.room:room-compiler:2.4.3'
     androidTestImplementation 'androidx.room:room-testing:2.4.3'
+
+    // coroutine
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4")
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation 'androidx.room:room-ktx:2.4.3'
+    api "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
 }
