--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,13 @@ dependencies {
     // lib testing 
     testImplementation "org.mockito:mockito-core:3.2.4"
     testImplementation "org.mockito:mockito-inline:3.2.4"
+
+    def junit_version = "4.13.1"
+    def ext_junit_version = "1.1.5"
+    def espresso_version = '3.5.1'
+
+    testImplementation "junit:junit:$junit_version"
+    androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
+    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
 }
