--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,17 +10,21 @@ jobs:
       - checkout
       - restore_cache:
           key: android-orb-v1-
-      - run:
-          name: Chmod permissions
-          command: sudo chmod +x ./gradlew
-      - save_cache:
-          key: 'android-orb-v1-{{ epoch }}'
-          paths:
-            - ~/.android/build-cache
-            - ~/.android/cache
-      - store_artifacts:
-          path: app/build/reports
-          destination: reports
+
+            - run:
+                name: Chmod permissions
+                command: sudo chmod +x ./gradlew
+            - run:
+                name: Create local.properties
+                command: touch local.properties
+            - run:
+                name: Download Dependencies
+                command: ./gradlew androidDependencies
+            - save_cache:
+                key: 'android-orb-v1-{{ epoch }}'
+                paths:
+                  - ~/.android/build-cache
+                  - ~/.android/cache
       - run:
           name: Run Tests
           command: ./gradlew lint test
@@ -29,3 +33,6 @@ jobs:
       - store_artifacts:
           path: app/build/outputs/apk/debug/
           destination: artifact-file
+      - run:
+          name: Delete local.properties
+          command: rm local.properties
